# NPET-Data-Processing

./: .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  coverage-badge.json  pyproject.toml  release.py
.github/workflows/: code-quality.yml  testing-pipeline.yml  third-party-notices.yml
src/NPET_DP/: __main__.py  main_cli.py
src/NPET_DP/epoch_processing/: helper_funcs.py  helper_plot.py  helper_processing.py  helper_processing_prompted.py  one_epoch.py  pps.py  two_epochs.py
src/NPET_DP/framework/: config.py  constants.py  file_selection.py  path_handler.py  settings_menu.py
src/NPET_DP/processing/: calculations.py  data_struct.py  helpers.py  plotting.py
src/NPET_DP/workflows/: helpers.py  one_epoch.py  pps.py  (+1 more)
tests/: README.md  conftest.py  pytest.ini  test_app_launch.py
tests/test_data/: test_PPS.out  test_PPS_long.out  test_PPS_nonzero.out  test_data_START.out  test_data_STOP.out
tests/tests_epoch_processing/: test_helper_funcs.py  test_one_epoch.py  test_pps.py  test_processing_funcs.py  test_two_epochs.py
tests/tests_framework/: test_config.py  test_constants.py  test_file_selection.py  test_path_handler.py  test_settings_menu.py
tests/tests_package/: conftest.py  test_buildable.py  test_callable.py  test_installable.py  test_print_version.py
tests/tests_processing/: test_calculations.py  test_helpers.py
tests/tests_workflow/: test_pps_workflow.py  test_two_epochs_workflow.py
tests/tests_workflows/: test_one_epoch.py  test_pps.py  test_pps_workflow.py  test_two_epochs.py  test_two_epochs_workflow.py  test_typer_import_boundary.py
